...
    }

    var body: some View {
        NavigationView {
            Form {
                Section(header: Text("Button Details")) {
                    TextField("Name", text: $formData.name)

                    TextField("Description (optional)", text: $formData.description)
                }

                Section(header: Text("Appearance")) {
                    // Icon picker
...
